syntax = "proto3";
package b9lab.checkers.checkers;

import "gogoproto/gogo.proto";
import "checkers/params.proto";
import "checkers/system_info.proto";
import "checkers/stored_game.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/b9lab/checkers/x/checkers/types";

// GenesisState defines the checkers module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  SystemInfo systemInfo = 2 [(gogoproto.nullable) = false];
  repeated StoredGame storedGameList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
